--- a/09_Philly/scss/_medium.scss
+++ b/09_Philly/scss/_medium.scss
@@ -1,35 +1,50 @@
+/*header*/
+header {
+    h1, h2 {
+        padding-left: 15rem;
+    }
+}
+
 /* NAVIGATION STUFF GOES HERE  */
 nav button {display: none;}
 #primaryNav {display:flex;}
+
+#primaryNav li.parent > a:after {
+    content:"\25BC";
+    font-size:.65rem;
+    color: white;
+    float: left;
+}
 nav {
     display: flex;
     justify-items: left;
-
-    ul {
-        margin-left: 2%;
-        border-left: 1px solid rgba(255, 255, 255, .1);
-        
-    }
-    ul li{
-        border-right: 1px solid rgba(255, 255, 255, .1);
-    }
-    ul li a {
-        border:non;
-        font-size: 1rem;
-        padding: .9rem 1.2rem;
-        color: rgba(255, 255, 255, 1);
-        text-decoration: none;
-        -webkit-transition: background 0.3s linear;
-        transition: background 0.3s linear;
-    }
-    ul li a:hover {background: darken($menuColor,5%);}
+ul li ul {
+    display: flex;
+    flex-direction: column;
+    background-color: darken($menuColor, 5%);
+    border: none;
+    width: 14rem;
+    position: absolute;
+    left: -999rem;
+    z-index: 99;
 }
-
-div.parent {
-    grid-template-columns: 1fr 1fr 1fr;
-span{font-size: 1rem;}
-.one{grid-column: 1 / span 3;}
+ul li ul li {
+    border-right: none;
+    border-top: solid 1px rgba(0,0,0,0.2);
 }
+ul li:hover ul {
+    left: auto;
+    margin-left: 0;
+}
+li.active a {background-color: rgba(0,0,0,0.2)}
+
+/*----------- COLUMN --------------*/
+@for $i from 1 through 12 {
+    $w: ( $i / 12) * 100%;
+    .medium-#{$i} {
+      flex-basis: $w;
+    }
+  } //end loop
 
 div.footer {
     display: grid; 
@@ -42,4 +57,6 @@ div.footer {
         font-size: 1rem;
         padding: .5rem; 
     }
+}
+    
 }
