--- a/09_Philly/scss/_small.scss
+++ b/09_Philly/scss/_small.scss
@@ -25,7 +25,7 @@ header {
 	h1 {
         font-size: 2rem;
         font-weight: $normalWeight;
-        padding-left: 15rem;
+        padding: 0;
         margin: .5rem;
         color: $primaryColor;
         justify-content: center;
@@ -33,7 +33,7 @@ header {
     h2 {
         font-size: 1rem;
         font-weight: $lightWeight;
-        padding-left: 15rem;
+        padding-left: 0;
         margin: .5rem .5rem 2rem;
         color: $primaryColor;
         justify-content: center; 
@@ -57,6 +57,7 @@ nav {
         color:white;
         text-decoration: none;
         border-top: 1px solid rgba(0,0,0,.2);
+        transition: background 0.3s linear;
     }
     ul li a:hover {
         background-color: rgba(0,0,0,.5);
@@ -75,8 +76,8 @@ nav button {
     .line {
         position: absolute;
         height: 2px;
-        width: 60%;
-        left: 20%;
+        width: 5%;
+        left: 10%;
         background-color: white;
         transition: all .3s ease;
     }
@@ -101,23 +102,96 @@ nav button {
 /* MAIN  */
 main {
  	p {padding: .5rem 2vw; color: #333; line-height: 125%;}
+    /* slider*/
+    .swiper-wrapper {
+        margin-bottom: 25px;
+    
+    }
+    .swiper {
+        width: 100%;
+        height: auto;
+        img {
+            width: 100%;
+            display: block;
+        }
+        p {
+            margin: 0;
+            padding: .4rem 2vw;
+            position: absolute;
+            transform: translateY(-100%);
+            background-color: rgba(0,0,0,0.5);
+            text-align: center;
+            color: white;
+            width: 100%;
+        }
+        b{font-weight: 500;}
+    }// end swiper
 	h1 {
         padding: 1rem 2vw .5rem 2vw; 
         font-size: 1.5rem; 
         color: $secondaryColor;
         font-weight: $lightWeight
     }
-    figcaption {
-        display: block;
-        text-align: center;
-        font-size: 0.8rem;
-      }
-      figure.mypic figcaption {
-        text-align: center;
-        font-size: 0.75rem;
-      }
+    div.flexed  {
+        display: flex;
+            flex-wrap: wrap; 
+    }
+    .column {padding:0;}
+@for $i from 1 through 12 {
+    $w:($i / 12) * 100%;
+    .small-#{$i} {flex-basis: $w;}
+}//end loop
+
+    div.cards{
+         padding: 1rem;
+        margin-top: 1rem;
+        
+        div:nth-child(1) {background-image:url("../images/libertysmall.jpg")}
+        div:nth-child(2) {background-image:url("../images/independencesmall.jpg")}
+        div:nth-child(3) {background-image:url("../images/artsmall.jpg")}
+        div:nth-child(4) {background-image:url("../images/riversmall.jpg")}
+    div:nth-child(1) a {
+        background-color: yellow;
+        border-top-left-radius: 5px;
+        border-top-right-radius:5px;
+    }
+    div:nth-child(2) a {
+        background-color: red;
+    }
+    div:nth-child(3) a {
+        background-color: lightskyblue;
+    }
+    div:nth-child(4) a {
+        background-color: lavender;
+    }
     
+    div a:hover {
+        background: none;
+        text-shadow: 0 0 4px white;
+    }
+    div a {
+        
+        display: block;
+        width: 100%;
+        height: auto;
+        text-decoration: none;
+        padding: 0 2%;
+        transition: all .5s ease-in;
+        padding: 1rem;
+    }
+    
+    .place {
+        
+        border: 1px solid rgb(216, 209, 209);
+        border-radius:  10px;
+        margin:0;
+        text-align: center;
+    }
+    } 
+
+
 } // end main
+
 
 div.parent {
     display: grid; 
