--- a/09_Philly/scss/_variables.scss
+++ b/09_Philly/scss/_variables.scss
@@ -1,7 +1,7 @@
 $primaryColor: white; 
 $secondaryColor: #156496;
 
-$menuColor: #265b7d;
+$menuColor: #2e96d6;
 
 $defaultFont:'Spline Sans', sans-serif;
 $lightWeight: 400;
