--- a/04 News/scss/_large.scss
+++ b/04 News/scss/_large.scss
@@ -24,7 +24,18 @@ div#headerWrapper {
 main {
         .card{flex-basis:31.333%;}
     }
+    /*----------- COLUMN --------------*/
+@for $i from 1 through 12 {
+    $w:($i/12) * 100%;
+    .larg-#{$i} {flex-basis: $w;}
+  }//end loop
+  
 
+    div.blogger {
+        display: grid; 
+        grid-template-rows: auto;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 
 /*----------- FOOTER --------------*/
     
