--- a/04 News/scss/_small.scss
+++ b/04 News/scss/_small.scss
@@ -29,15 +29,14 @@ background-color:rgba(34, 33, 33, 0.301);}
 header h2 {margin: 0; font-weight: normal;
     background-color:rgba(34, 33, 33, 0.301);}
 
-
+/* NAVIGATION STUFF GOES HERE  */
 nav {
     ul {
         display:none;
-        text-decoration: none;
         margin: 0;
         padding: 0;
     }
-    ul li.active a {background-color: red;}
+    ul li.active a {background-color: rgb(50, 50, 156);}
     ul li a {
         display: block;
         padding: .75rem 2vw;
@@ -45,12 +44,12 @@ nav {
         color:white;
         text-decoration: none;
         border-top: 1px solid rgba(0,0,0,.2);
+        transition: background 0.3s linear;
     }
     ul li a:hover {
-        background-color: red;
+        background-color: rgb(156, 72, 72);
     }
-    ul.open{display:block;
-    text-decoration: none;}
+    ul.open{display:block;}
 }
 
 #navWrapper {background-color: $menuColor;}
@@ -90,39 +89,51 @@ nav button {
 main {
     padding: 0 2%;
     min-height: 10rem;
+/*-----------COLUMNS--------------*/
+div.flexed {display:flex; flex-wrap: wrap;}
+    //end parent
+.column {padding:0;}
+@for $i from 1 through 12 {
+    $w:($i / 12) * 100%;
+    .small-#{$i} {flex-basis: $w;}
+}//end loop
 
-    $cbr: 10px;
-    .card-deck {
-        display: flex;
-        flex-wrap: wrap;
+.card-blogs {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.blog{
+    border-radius:  10px;
+    display: grid; 
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    flex-basis:100%;
+    border: 1px solid rgb(216, 209, 209);
+    margin:0;
+    text-align: center;
+    
+    section {
+        border-radius:  10px;
+        background-color: rgb(126, 125, 125);
+        color: #eee;
+        padding: .5rem;
+        font-size: larger;
+    }//end of card
+    i {
+        margin: 1rem;
     }
-    .card{
-        flex-basis:100%;
-        border: 1px solid rgb(216, 209, 209);
-        border-radius:  $cbr;
-        margin: 1rem 0;
-        text-align: center;
-        section {
-            background-color: #444;
-            color: #eee;
-            padding: 1rem 1%;
-            border-top-left-radius: $cbr - 1;
-            border-top-right-radius: $cbr - 1;
-        }//end of card
-        img {
-            padding: 1rem;
-        }//end of image
-        p {padding: 1rem 2vw;}
-        a {
-            display: block;
-            background-color: crimson;
-            color: white;
-            padding: 1rem 0;
-            margin: 1rem 4vw;
-            border-radius: $cbr;
-        }
-        a:hover{background-color: lighten(crimson, 10%);}
-    }//end of section
+    
+    a {
+        border-radius:  10px;
+        display: block;
+        background-color: navy;
+        color: white;
+        padding: .5rem 0;
+        
+    }
+    a:hover{background-color: lighten(crimson, 10%);}
+}//end of section
 
     div.test {
         width: 3rem;
@@ -160,9 +171,10 @@ main {
 
 /*----------- FOOTER --------------*/
 footer {
-    background-color: #ddd;
+    background-color: rgb(44, 99, 218);
     padding: .5rem 2%;
     text-align: center;
+    color:white;
 }
 
 
