--- a/04 News/scss/_large.scss
+++ b/04 News/scss/_large.scss
@@ -34,7 +34,7 @@ main {
     div.blogger {
         display: grid; 
         grid-template-rows: auto;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
 /*----------- FOOTER --------------*/
