--- a/04 News/scss/_large.scss
+++ b/04 News/scss/_large.scss
@@ -31,11 +31,19 @@ main {
   }//end loop
   
 
-    div.blogger {
-        display: grid; 
-        grid-template-rows: auto;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  div.blogger {
+    display: grid; 
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    .blog1 {grid-column: 1; grid-row:1;}
+  .blog2 {grid-column: 2; grid-row:1;}
+  .blog3 {grid-column: 3; grid-row:1;}
+  .blog4 {grid-column: 1; grid-row:2;}
+  .blog5 {grid-column: 2; grid-row:2;}
+  .blog6 {grid-column: 3; grid-row:2;}
+  .blog7 {grid-column: 1; grid-row:4;}
+  .blog8 {grid-column: 2; grid-row:4;}
+}
 
 /*----------- FOOTER --------------*/
     
