--- a/04 News/scss/_medium.scss
+++ b/04 News/scss/_medium.scss
@@ -46,8 +46,17 @@ nav ul {
 
 
 div.blogger {
+  display: grid;
   grid-template-columns: 1fr 1fr;
-
+  grid-template-rows: auto;
+  .blog1 {grid-column: 1; grid-row:1;}
+  .blog2 {grid-column: 2; grid-row:1;}
+  .blog3 {grid-column: 1; grid-row:2;}
+  .blog4 {grid-column: 2; grid-row:2;}
+  .blog5 {grid-column: 1; grid-row:3;}
+  .blog6 {grid-column: 2; grid-row:3;}
+  .blog7 {grid-column: 1; grid-row:4;}
+  .blog8 {grid-column: 2; grid-row:4;}
 }
 
 
