--- a/04 News/scss/_small.scss
+++ b/04 News/scss/_small.scss
@@ -88,32 +88,12 @@ nav button {
 /*----------- MAIN --------------*/
 main {
     p {padding: .5rem 2vw; color: #333; line-height: 125%;}
-	h1 {
-        padding: 1rem 2vw .5rem 2vw; 
-        font-size: 1.5rem; 
-        color: $secondaryColor;
-        font-weight: $lightWeight
-    }
-
-
-    
-
+	
 div.blogger {
     display: grid; 
     margin: 0 2vw;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    span{
-        display: block;
-        text-align: center;
-        font-size: .8rem;
-    }
-    .sub,.one {
-        padding:.5rem 2vw;
-    }
-  .sub img, .one img {width:100%; }
-  .one{grid-column:1/ span 2;}
-
 }
 .blog {
     border-radius:  10px;
@@ -126,14 +106,13 @@ div.blogger {
         border-radius:  10px;
         background-color: rgb(126, 125, 125);
         color: #eee;
-      
+        text-align: left;
         font-size: larger;
-        padding:.5rem 2vw;
+        padding:.5rem;
     }//end of card
     img {
         width: 100px;
         height: 200px;
-        display: block;
         margin-left: auto;
         margin-right: auto;
         padding: .5rem;
