--- a/04 News/scss/_large.scss
+++ b/04 News/scss/_large.scss
@@ -25,16 +25,12 @@ main {
         .card{flex-basis:31.333%;}
     }
     /*----------- COLUMN --------------*/
-@for $i from 1 through 12 {
-    $w:($i/12) * 100%;
-    .larg-#{$i} {flex-basis: $w;}
-  }//end loop
-  
 
   div.blogger {
     display: grid; 
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr 1fr;
+    flex-basis: 31.33%;
     .blog1 {grid-column: 1; grid-row:1;}
   .blog2 {grid-column: 2; grid-row:1;}
   .blog3 {grid-column: 3; grid-row:1;}
