--- a/04 News/scss/_medium.scss
+++ b/04 News/scss/_medium.scss
@@ -46,10 +46,13 @@ nav ul {
 
 
 div.blogger {
+  
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  .blog1 {grid-column: 1; grid-row:1;}
+  flex-basis: 48%;
+  .blog1 {grid-column: 1; grid-row:1;
+   }
   .blog2 {grid-column: 2; grid-row:1;}
   .blog3 {grid-column: 1; grid-row:2;}
   .blog4 {grid-column: 2; grid-row:2;}
