--- a/09_Philly/scss/_medium.scss
+++ b/09_Philly/scss/_medium.scss
@@ -40,6 +40,17 @@ li.active a {background-color: rgba(0,0,0,0.2)}
 
 div.parent {
     grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    .blog1 {grid-column: 1; grid-row:1;}
+    .blog2 {grid-column: 2; grid-row:1;}
+    .blog3 {grid-column: 1; grid-row:2;}
+    .blog4 {grid-column: 2; grid-row:2;}
+    .blog5 {grid-column: 1; grid-row:3;}
+    .blog6 {grid-column: 2; grid-row:3;}
+    .blog7 {grid-column: 1; grid-row:4;}
+    .blog8 {grid-column: 2; grid-row:4;}
 }
 /*----------- COLUMN --------------*/
 @for $i from 1 through 12 {
@@ -48,6 +59,21 @@ div.parent {
       flex-basis: $w;
     }
   } //end loop
+
+  div.blogger {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    .blog1 {grid-column: 1; grid-row:1;}
+    .blog2 {grid-column: 2; grid-row:1;}
+    .blog3 {grid-column: 1; grid-row:2;}
+    .blog4 {grid-column: 2; grid-row:2;}
+    .blog5 {grid-column: 1; grid-row:3;}
+    .blog6 {grid-column: 2; grid-row:3;}
+    .blog7 {grid-column: 1; grid-row:4;}
+    .blog8 {grid-column: 2; grid-row:4;}
+  }
+  
 
 div.footer {
     display: grid; 
