--- a/09_Philly/scss/_small.scss
+++ b/09_Philly/scss/_small.scss
@@ -201,6 +201,17 @@ main {
         border-radius:  10px;
         margin:0;
         text-align: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        .blog1 {grid-column: 1; grid-row:1;}
+        .blog2 {grid-column: 2; grid-row:1;}
+        .blog3 {grid-column: 1; grid-row:2;}
+        .blog4 {grid-column: 2; grid-row:2;}
+        .blog5 {grid-column: 1; grid-row:3;}
+        .blog6 {grid-column: 2; grid-row:3;}
+        .blog7 {grid-column: 1; grid-row:4;}
+        .blog8 {grid-column: 2; grid-row:4;}
     }
     } 
 
