--- a/10_Swag/scss/styles.scss
+++ b/10_Swag/scss/styles.scss
@@ -1,17 +1,11 @@
-@import "reset";
-
-@import "variables";
+@import "normalize";
 
 @import "small";
-
-@import "mobilemenu";
-
-//35em is also 560px (if basefont is 16px)
 
 @media only screen and (min-width: 35rem) {
     @import "medium";
 } /* end of media query */
 
-@media only screen and (min-width: 60rem) {
+@media only screen and (min-width: 64rem) {
     @import "large";
 } /* end of media query */
