--- a/09_Philly/scss/_large.scss
+++ b/09_Philly/scss/_large.scss
@@ -13,21 +13,20 @@ nav ul li a {
     padding: .5rem 1.2rem;
 
 }
-
-/*----------- COLUMN --------------*/
-
-  div.parent {
-    grid-template-columns: 1fr 1fr 1fr;
-
+//main
+div.parent {
+    display: grid; 
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    flex-basis: 22%;
+    .blog1 {grid-column: 1; grid-row:1;}
+  .blog2 {grid-column: 2; grid-row:1;}
+  .blog3 {grid-column: 3; grid-row:1;}
+  .blog4 {grid-column: 4; grid-row:1;}
 }
-.blog1 {grid-column: 1; grid-row:1;}
-    .blog2 {grid-column: 2; grid-row:1;}
-    .blog3 {grid-column: 1; grid-row:2;}
-    .blog4 {grid-column: 2; grid-row:2;}
-    .blog5 {grid-column: 1; grid-row:3;}
-    .blog6 {grid-column: 2; grid-row:3;}
-    .blog7 {grid-column: 1; grid-row:4;}
-    .blog8 {grid-column: 2; grid-row:4;}
+
+
+//footer
 div.footer {
     display: grid; 
     margin: 0 2vw;
