--- a/09_Philly/scss/_medium.scss
+++ b/09_Philly/scss/_medium.scss
@@ -1,24 +1,29 @@
 /*header*/
 header {
-    h1, h2 {
-        padding-left: 15rem;
-    }
+  h1,
+  h2 {
+    padding-left: 15rem;
+  }
 }
 
 /* NAVIGATION STUFF GOES HERE  */
-nav button {display: none;}
-#primaryNav {display:flex;}
+nav button {
+  display: none;
+}
+#primaryNav {
+  display: flex;
+}
 
 #primaryNav li.parent > a:after {
-    content:"\25BC";
-    font-size:.65rem;
-    color: white;
-    float: left;
+  content: "\25BC";
+  font-size: 0.65rem;
+  color: white;
+  float: left;
 }
 nav {
-    display: flex;
-    justify-items: left;
-ul li ul {
+  display: flex;
+  justify-items: left;
+  ul li ul {
     display: flex;
     flex-direction: column;
     background-color: darken($menuColor, 5%);
@@ -27,24 +32,27 @@ ul li ul {
     position: absolute;
     left: -999rem;
     z-index: 99;
-}
-ul li ul li {
+  }
+  ul li ul li {
     border-right: none;
-    border-top: solid 1px rgba(0,0,0,0.2);
-}
-ul li:hover ul {
+    border-top: solid 1px rgba(0, 0, 0, 0.2);
+  }
+  ul li:hover ul {
     left: auto;
     margin-left: 0;
+  }
+  li.active a {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 }
-li.active a {background-color: rgba(0,0,0,0.2)}
-}
+
+/*----------- MAIN --------------*/
 div.parent {
-    grid-template-columns: 1fr 1fr;
-    display: grid;
-    flex-basis: 48%;
-    
-}
-.blog1 {
+  grid-template-columns: 1fr 1fr;
+  display: grid;
+  flex-basis: 48%;
+  grid-template-rows: auto;
+  .blog1 {
     grid-column: 1;
     grid-row: 1;
   }
@@ -60,21 +68,19 @@ div.parent {
     grid-column: 2;
     grid-row: 2;
   }
-
+}
 /*----------- COLUMN --------------*/
 
-  
-
 div.footer {
-    display: grid; 
-    margin: 0 2vw;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    h1, p {
-        color: rgb(250, 244, 244);
-        text-align: left;
-        font-size: 1rem;
-        padding: .5rem; 
-    }
+  display: grid;
+  margin: 0 2vw;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  h1,
+  p {
+    color: rgb(250, 244, 244);
+    text-align: left;
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
 }
-    
