--- a/09_Philly/scss/_small.scss
+++ b/09_Philly/scss/_small.scss
@@ -152,26 +152,8 @@ main {
     color: $secondaryColor;
     font-weight: $lightWeight;
   }
-  div.flexed {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .column {
-    padding: 0;
-  }
-  @for $i from 1 through 12 {
-    $w: ($i / 12) * 100%;
-    .small-#{$i} {
-      flex-basis: $w;
-    }
-  } //end loop
-
-  div.parent {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    flex-basis: 98%;
-    
+    div.parent {
+        padding: 1rem;
     div:nth-child(1) {
       background-image: url("../images/libertysmall.jpg");
       
@@ -214,41 +196,14 @@ main {
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
     }
-
-      .blog1 {
-        grid-column: 1;
-        grid-row: 1;
-      }
-      .blog2 {
-        grid-column: 1;
-        grid-row: 2;
-      }
-      .blog3 {
-        grid-column: 1;
-        grid-row: 3;
-      }
-      .blog4 {
-        grid-column: 1;
-        grid-row: 4;
-      }
-      .blog5 {
-        grid-column: 1;
-        grid-row: 3;
-      }
-      .blog6 {
-        grid-column: 2;
-        grid-row: 3;
-      }
-      .blog7 {
-        grid-column: 1;
-        grid-row: 4;
-      }
-      .blog8 {
-        grid-column: 2;
-        grid-row: 4;
-      }
     }
-  
+    .blog {
+      display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    flex-basis: 98%;
+    
+    }
 } // end main
 
 div.footer {
