--- a/15 Job/scss/_medium.scss
+++ b/15 Job/scss/_medium.scss
@@ -3,9 +3,10 @@ nav button {display: none;}
 #primaryNav {display:flex;
 align-items: right;}
 nav {
-    display: flex;
+    display: block;
     justify-items: right;
-    padding-left: 32.1rem;
+    float: right;
+    padding-right: 1rem;
     ul {
         margin-right: 2%;
         border-left: 1px solid rgba(255, 255, 255, .1);
