--- a/11_Tech/scss/_large.scss
+++ b/11_Tech/scss/_large.scss
@@ -27,7 +27,13 @@ a {padding: .6rem 1rem;}
 
 
 /*----------- MAIN --------------*/
+main {
 
+
+        h1 {
+            font-size: 50px;
+        }
+        }
 
 
 /*----------- FOOTER --------------*/
