--- a/13_Weather/scss/_small.scss
+++ b/13_Weather/scss/_small.scss
@@ -73,6 +73,10 @@ figure {
     }
 }
 }
+section#weatherforecast {
+    display: grid;
+    grid-template-columns: 1fr;
+}
 /*----------- FOOTER --------------*/
 footer {
     background-color: #ddd;
