--- a/13_Weather copy/scss/_large.scss
+++ b/13_Weather copy/scss/_large.scss
@@ -21,6 +21,10 @@ section#weatherforecast {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 
-
+    div#forecast {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
+    }
 /*----------- FOOTER --------------*/
     
