--- a/13_Weather copy/scss/_small.scss
+++ b/13_Weather copy/scss/_small.scss
@@ -13,30 +13,22 @@ body {
 
 /*----------- MAIN --------------*/
 
-.weatherDay {
-    border:1px solid gray;
-    border-radius: 10px;
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color:lightblue;
-    box-shadow: 5px 10px 4px -1px rgba(0,0,0,0.34);
-}
-.weatherDay img {
-    float:right;
-    
-}
-.weatherDay p {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-.weatherDay h2,.weatherDay h3 {
-    margin-top:5px;
-    margin-bottom: 5px;
-}
+      h1 {
+        margin: auto;
+        text-align: center;
+      }
 
       body {
         font-family: "Be Vietnam Pro", sans-serif;
         font-family: "Quicksand", sans-serif;
+      }
+      div#forecast {
+        display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      padding: 1rem;
+      margin: 2rem;
+
       }
       .weatherDay {
         border: 1px solid gray;
@@ -48,7 +40,11 @@ body {
         color: black;
       }
       .weatherDay img {
-        float: right;
+        display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+        
       }
       .weatherDay p {
         margin-top: 5px;
