--- a/13_Weather copy/scss/_medium.scss
+++ b/13_Weather copy/scss/_medium.scss
@@ -23,6 +23,10 @@ section#weatherforecast {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-
+div#forecast {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+}
 /*----------- FOOTER --------------*/
     
