--- a/12 HOTEL/scss/_small.scss
+++ b/12 HOTEL/scss/_small.scss
@@ -72,16 +72,16 @@ main {
     min-height: 10rem;
     padding-bottom: 5rem;
     h1 {margin: auto;
-        text-align: center;}
+        text-align: center;
+        color: rgb(89, 89, 161);}
+    
+    
 div#inventoryWrapper{
     display: grid; 
     grid-template-columns: 1fr 1fr;
     
 }
 
-ion-icon {
-    font-size: 50px;
-  }
 div#myCards {
     
     display: grid; 
@@ -90,7 +90,6 @@ div#myCards {
     flex-basis:100%;
     margin: .5rem .5rem;
     text-align: center;
-    
 
 figure {
     border: 20px solid rgb(216, 209, 209);
@@ -99,45 +98,39 @@ figure {
     position:relative;
     img {width:100%;
     }
-
+    
 figcaption {
     position:absolute;
     bottom:0;
     background-color: rgba(255,255,255,.5);
     width:100%;
     padding: .5rem 2vw;
+    
 }//endcaption
 }//end of fig
-p {
+
+p{
     display: grid; 
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr;
     flex-basis:100%;
     text-align: left;
     padding-left: 1.6rem;
-    
-    background-color: rgb(216, 209, 209);
+    background-color: rgb(248, 245, 245);
     address {
         grid-template-rows:auto;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     flex-basis:100%;
-    
     }
-}
-
+   img {
+    padding: 0;
+    margin: 0;
+   }
+   
 }//end of div
-div {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-div below span i {
-    float: left;
-    font-size: 1.5rem;
-}
-div below span p {
-    padding-left: 1.6rem;
-}
-}
+
+}}
+
 /*----------- FOOTER --------------*/
 footer {
     background-color: #ddd;
