--- a/_FINAL/scss/_medium.scss
+++ b/_FINAL/scss/_medium.scss
@@ -16,12 +16,11 @@
     nav ul li:last-child a {border-right: 1px solid #777;}
     nav ul li a{padding: .5rem 1rem;}
 
+/* NAVIGATION STUFF GOES HERE  */
+
 
 /*----------- MAIN --------------*/
-section#weatherforecast {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
+
 
 
 /*----------- FOOTER --------------*/
