--- a/05 Restaurant/scss/_small.scss
+++ b/05 Restaurant/scss/_small.scss
@@ -146,6 +146,7 @@ main {
     display:block;
     width: 96%;
     margin: 0 2%;
+    position: relative;
   }
   picture.photoA img, picture.photoB img {width: 100%;}
   picture.photoA div, picture.photoB div {
@@ -157,6 +158,7 @@ main {
     float: right;
     width: 46%;
     margin: 0 2%;
+    position: relative;
   }
   figure.myphoto {
     width: 100%;
