--- a/13_Weather copy/scss/_medium.scss
+++ b/13_Weather copy/scss/_medium.scss
@@ -18,15 +18,13 @@
 
 
 /*----------- MAIN --------------*/
-section#weatherforecast {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
 
 div#forecast {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
+    justify-content: center;
+    align-items: center;
 }
 /*----------- FOOTER --------------*/
     
