--- a/13_Weather copy/scss/_small.scss
+++ b/13_Weather copy/scss/_small.scss
@@ -16,6 +16,7 @@ body {
       h1 {
         margin: auto;
         text-align: center;
+        color: blue;
       }
 
       body {
@@ -29,8 +30,25 @@ body {
       padding: 1rem;
       margin: 2rem;
 
-      }
-      .weatherDay {
+      display: grid; 
+      grid-template-rows: auto;
+      grid-template-columns: 1fr;
+      flex-basis:100%;
+      margin: .5rem .5rem;
+      text-align: center;
+  
+      
+  .theDayName{
+      position:absolute;
+      bottom:0;
+      background-color: rgba(255,255,255,.5);
+      width:100%;
+      padding: .5rem 2vw;
+      color: blue;
+      
+  }//endcaption
+
+      div {
         border: 1px solid gray;
         border-radius: 10px;
         padding: 10px;
@@ -43,7 +61,7 @@ body {
         display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 50%;
         
       }
       .weatherDay p {
@@ -55,7 +73,7 @@ body {
         margin-top: 5px;
         margin-bottom: 5px;
       }
-     
+    }
      
 /*----------- FOOTER --------------*/
 footer {
