--- a/_FINAL/scss/_small.scss
+++ b/_FINAL/scss/_small.scss
@@ -9,28 +9,28 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
+    min-width: 320px;
 }
 
 
 /*----------- HEADER --------------*/
-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
-    background-color: rgb(230, 151, 233);
+header {    
+    background-color: white;
     
     .header img {
+      float: left;
         width: 100px;
         height: 100px;
         grid-column: 1;
+        
       }
       
       .header h1 {
-        grid-column: 2;
-       
-        top: 18px;
+        position: relative;
+        
+        top: 10px;
         left: 10px;
-        color: rgb(71, 67, 67);
+        color: rgb(245, 9, 186);
       }
       
 }
@@ -45,13 +45,13 @@ nav {
       padding: 0;
     }
     ul li.active a {
-      background-color: rgba(231, 2, 2, 0.25);
+      background-color: rgba(104, 10, 68, 0.25);
     }
     ul li a {
       display: block;
       padding: 0.75rem 2vw;
       font-size: 1.1rem;
-      color: rgb(12, 11, 11);
+      color: rgb(243, 234, 234);
       text-decoration: none;
       border-top: 1px solid rgba(0, 0, 0, 0.2);
       transition: background 0.3s linear;
@@ -63,7 +63,9 @@ nav {
       display: block;
     }
   }
-  
+
+  #navWrapper {
+    background-color: rgb(224, 88, 129);
   nav button {
     position: relative;
     height: 44px;
@@ -75,7 +77,7 @@ nav {
       height: 2px;
       width: 55%;
       left: 20%;
-      background-color: rgb(10, 6, 6);
+      background-color: rgb(248, 246, 246);
       transition: all 0.3s ease;
     }
     .top {
@@ -100,47 +102,56 @@ nav {
       top: 48%;
     }
 }
+  }
+  
 /*----------- MAIN --------------*/
+/* MAIN  */
 main {
-    padding: 0 2%;
-    min-height: 10rem;
-    p {
-      padding: 0.5rem 2vw;
-      color: #333;
-      line-height: 125%;
-    }
-    /* slider*/
-    .swiper-wrapper {
-      margin-bottom: 25px;
-    }
-    .swiper {
+  background-color: rgb(208, 247, 247);
+  p {
+    padding: 0.5rem 2vw;
+    color: #333;
+    line-height: 125%;
+  }
+  /* slider*/
+  .swiper-wrapper {
+    margin-bottom: 25px;
+  }
+  .swiper {
+    width: 100%;
+    height: auto;
+    img {
       width: 100%;
-      height: auto;
-      img {
-        width: 100%;
-        display: block;
-      }
-      p {
-        margin: 0;
-        padding: 0.4rem 2vw;
-        position: absolute;
-        transform: translateY(-100%);
-        background-color: rgba(0, 0, 0, 0.5);
-        text-align: center;
-        color: white;
-        width: 100%;
-      }
-      b {
-        font-weight: 500;
-      }
-    } // end swiper
-    h1 {
-      padding: 1rem 2vw 0.5rem 2vw;
-      font-size: 1.5rem;
-      color: $secondaryColor;
-      font-weight: $lightWeight;
+      display: block;
     }
-}
+    p {
+      margin: 0;
+      padding: 0.4rem 2vw;
+      position: absolute;
+      transform: translateY(-100%);
+      background-color: rgba(0, 0, 0, 0.5);
+      text-align: center;
+      color: white;
+      width: 100%;
+    }
+    b {
+      font-weight: 500;
+    }
+  } // end swiper
+  h1 {
+    padding: 1rem 2vw 0.5rem 2vw;
+    font-size: 2rem;
+    color: rgb(0, 119, 255);
+    font-weight: 800;
+    text-align: center;
+  }
+  p {
+    color:rgb(224, 88, 129);
+    font-weight: 600;
+    
+  }
+
+} // end main
 /*-- Form style--*/
 
 form fieldset {
@@ -152,7 +163,7 @@ form fieldset {
 form legend {
     color: #445ba9;
     margin: 0 1rem;
-    padding: 0 .5rem;
+    padding: 0 1rem;
 }
 form label.top, form div {
     display: block;
@@ -179,7 +190,7 @@ form label.sbs {
 }
 form input.submitBtn {
     border:none;
-    background-color: red;
+    background-color: rgb(224, 88, 129);
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
@@ -193,18 +204,86 @@ form label.top input:required {
 form label.top input:required:valid {
     border-left: green solid 6px;
 }
+
+//Cards
+.card-blogs {
+  display: flex;
+  flex-wrap: wrap;
+  grid-template-columns: 1fr 1fr;
+}
+.blog{
+  display: grid; 
+  grid-template-rows: auto;
+  grid-template-columns: 1fr ;
+  flex-basis:100%;
+  border: 2px solid rgb(127, 127, 224);
+  margin: .5rem .5rem;
+  text-align: center;
+  background-color: rgb(238, 226, 174);
+  border-radius: 10px;
+  p {
+    padding: 0;
+  }
+  section {
+      
+      color: rgb(112, 104, 104);
+      padding: .5rem;
+      font-size: larger;
+  }//end of card
+  ul li {
+    text-align: left;
+  }
+  img {
+      width: auto;
+      height:300px;
+      padding: 0;
+  }//end of image
+  a {
+      display: block;
+      background-color: rgb(127, 127, 224);
+      color: white;
+      padding: .5rem 0;
+      border-radius: 8px;
+      
+  }
+  address {
+    text-align: left;
+    margin-left: 1rem;
+    margin-bottom: .5rem;
+  }
+  iframe {
+    display: none;
+  }
+  a:hover{background-color: lighten(rgb(224, 141, 157), 10%);}
+}//end of section
+
+
+div#pics {
+  padding-bottom: 1rem;
+  .full-width {
+    width: 100%;
+  }
+.height {
+  height:600px;
+}
+.pink {
+  background: pink;
+  margin-bottom: 10rem;
+}
+.blue {
+  background: steelblue;
+}
+}
+div.parent {
+  display: none;
+}
 /*----------- FOOTER --------------*/
 footer {
-    background-color: #ddd;
+    background-color: rgb(226, 38, 94);
     padding: .5rem 2%;
     text-align: center;
+    color: white;
+    padding: 2rem;
+    font-size: 1rem;
 }
 
-
-
-/*----- Clearfix: Force an Element not to collapse -----*/
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
